# ML_Projekt

./: Notiz  README.md  app.py  main.py  prepare_data.py  pyproject.toml
notebooks/: notebook.ipynb  notebook_V2.ipynb
