[project]
name = "ml-projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
